J'ai modifié la fonction ajoutMail
